src/main/java/com/asiainfo/rule/translator/parser/render/RuleParser.java
// Generated from E:/development/java/SZ-support3/rule-translator/src/main/resources/render\Rule.g4 by ANTLR 4.8

package com.asiainfo.rule.translator.parser.render;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RuleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEF=1, IF=2, IN=3, LIMIT=4, X1=5, X6=6, X7=7, DECIMAL_LITERAL=8, HEX_LITERAL=9, 
		OCT_LITERAL=10, BINARY_LITERAL=11, FLOAT_LITERAL=12, HEX_FLOAT_LITERAL=13, 
		BOOL_LITERAL=14, CHAR_LITERAL=15, STRING_LITERAL=16, LPAREN=17, RPAREN=18, 
		LBRACE=19, RBRACE=20, LBRACK=21, RBRACK=22, SEMI=23, COMMA=24, ASSIGN=25, 
		GT=26, LT=27, BANG=28, EQUAL=29, LE=30, GE=31, NOTEQUAL=32, AND=33, OR=34, 
		ADD=35, SUB=36, MUL=37, DIV=38, MOD=39, WS=40, COMMENT=41, LINE_COMMENT=42, 
		IDENTIFIER=43;
	public static final int
		RULE_program = 0, RULE_defineVariableStatement = 1, RULE_conditionStatement = 2, 
		RULE_segmentStatementList = 3, RULE_segmentStatement = 4, RULE_calculatorStatement = 5, 
		RULE_conditionExpr = 6, RULE_conditionRowExpr = 7, RULE_segmentExpr = 8, 
		RULE_segmentSubExpr = 9, RULE_expr = 10, RULE_array = 11, RULE_elementValue = 12, 
		RULE_atom = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "defineVariableStatement", "conditionStatement", "segmentStatementList", 
			"segmentStatement", "calculatorStatement", "conditionExpr", "conditionRowExpr", 
			"segmentExpr", "segmentSubExpr", "expr", "array", "elementValue", "atom"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'if'", "'in'", "'limit'", "'X1'", "'X6'", "'X7'", null, 
			null, null, null, null, null, null, null, null, "'('", "')'", "'{'", 
			"'}'", "'['", "']'", "';'", "','", "'='", "'>'", "'<'", "'!'", "'=='", 
			"'<='", "'>='", "'!='", "'&&'", "'||'", "'+'", "'-'", "'*'", "'/'", "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DEF", "IF", "IN", "LIMIT", "X1", "X6", "X7", "DECIMAL_LITERAL", 
			"HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL", "FLOAT_LITERAL", "HEX_FLOAT_LITERAL", 
			"BOOL_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", "LPAREN", "RPAREN", 
			"LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "ASSIGN", "GT", 
			"LT", "BANG", "EQUAL", "LE", "GE", "NOTEQUAL", "AND", "OR", "ADD", "SUB", 
			"MUL", "DIV", "MOD", "WS", "COMMENT", "LINE_COMMENT", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Rule.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RuleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ConditionStatementContext conditionStatement() {
			return getRuleContext(ConditionStatementContext.class,0);
		}
		public TerminalNode EOF() { return getToken(RuleParser.EOF, 0); }
		public DefineVariableStatementContext defineVariableStatement() {
			return getRuleContext(DefineVariableStatementContext.class,0);
		}
		public SegmentStatementListContext segmentStatementList() {
			return getRuleContext(SegmentStatementListContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleListener ) ((RuleListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleListener ) ((RuleListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleVisitor ) return ((RuleVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			setState(40);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DEF) {
					{
					setState(28);
					defineVariableStatement();
					}
				}

				setState(31);
				conditionStatement();
				setState(32);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DEF) {
					{
					setState(34);
					defineVariableStatement();
					}
				}

				setState(37);
				segmentStatementList();
				setState(38);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineVariableStatementContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(RuleParser.DEF, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(RuleParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(RuleParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(RuleParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RuleParser.COMMA, i);
		}
		public List<TerminalNode> SEMI() { return getTokens(RuleParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(RuleParser.SEMI, i);
		}
		public DefineVariableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineVariableStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleListener ) ((RuleListener)listener).enterDefineVariableStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleListener ) ((RuleListener)listener).exitDefineVariableStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleVisitor ) return ((RuleVisitor<? extends T>)visitor).visitDefineVariableStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefineVariableStatementContext defineVariableStatement() throws RecognitionException {
		DefineVariableStatementContext _localctx = new DefineVariableStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_defineVariableStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(DEF);
			setState(43);
			match(IDENTIFIER);
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(44);
				match(COMMA);
				setState(45);
				match(IDENTIFIER);
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(51);
				match(SEMI);
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionStatementContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(RuleParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(RuleParser.LPAREN, 0); }
		public ConditionExprContext conditionExpr() {
			return getRuleContext(ConditionExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(RuleParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(RuleParser.LBRACE, 0); }
		public CalculatorStatementContext calculatorStatement() {
			return getRuleContext(CalculatorStatementContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(RuleParser.RBRACE, 0); }
		public List<TerminalNode> SEMI() { return getTokens(RuleParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(RuleParser.SEMI, i);
		}
		public SegmentStatementListContext segmentStatementList() {
			return getRuleContext(SegmentStatementListContext.class,0);
		}
		public ConditionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleListener ) ((RuleListener)listener).enterConditionStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleListener ) ((RuleListener)listener).exitConditionStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleVisitor ) return ((RuleVisitor<? extends T>)visitor).visitConditionStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionStatementContext conditionStatement() throws RecognitionException {
		ConditionStatementContext _localctx = new ConditionStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_conditionStatement);
		int _la;
		try {
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				match(IF);
				setState(58);
				match(LPAREN);
				setState(59);
				conditionExpr();
				setState(60);
				match(RPAREN);
				setState(61);
				match(LBRACE);
				setState(62);
				calculatorStatement();
				setState(63);
				match(RBRACE);
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMI) {
					{
					{
					setState(64);
					match(SEMI);
					}
					}
					setState(69);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				match(IF);
				setState(71);
				match(LPAREN);
				setState(72);
				conditionExpr();
				setState(73);
				match(RPAREN);
				setState(74);
				match(LBRACE);
				setState(75);
				segmentStatementList();
				setState(76);
				match(RBRACE);
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMI) {
					{
					{
					setState(77);
					match(SEMI);
					}
					}
					setState(82);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SegmentStatementListContext extends ParserRuleContext {
		public List<SegmentStatementContext> segmentStatement() {
			return getRuleContexts(SegmentStatementContext.class);
		}
		public SegmentStatementContext segmentStatement(int i) {
			return getRuleContext(SegmentStatementContext.class,i);
		}
		public SegmentStatementListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_segmentStatementList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleListener ) ((RuleListener)listener).enterSegmentStatementList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleListener ) ((RuleListener)listener).exitSegmentStatementList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleVisitor ) return ((RuleVisitor<? extends T>)visitor).visitSegmentStatementList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SegmentStatementListContext segmentStatementList() throws RecognitionException {
		SegmentStatementListContext _localctx = new SegmentStatementListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_segmentStatementList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(85);
				segmentStatement();
				}
				}
				setState(88); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IF );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SegmentStatementContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(RuleParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(RuleParser.LPAREN, 0); }
		public SegmentExprContext segmentExpr() {
			return getRuleContext(SegmentExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(RuleParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(RuleParser.LBRACE, 0); }
		public CalculatorStatementContext calculatorStatement() {
			return getRuleContext(CalculatorStatementContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(RuleParser.RBRACE, 0); }
		public List<TerminalNode> SEMI() { return getTokens(RuleParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(RuleParser.SEMI, i);
		}
		public SegmentStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_segmentStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleListener ) ((RuleListener)listener).enterSegmentStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleListener ) ((RuleListener)listener).exitSegmentStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleVisitor ) return ((RuleVisitor<? extends T>)visitor).visitSegmentStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SegmentStatementContext segmentStatement() throws RecognitionException {
		SegmentStatementContext _localctx = new SegmentStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_segmentStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(IF);
			setState(91);
			match(LPAREN);
			setState(92);
			segmentExpr();
			setState(93);
			match(RPAREN);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACE) {
				{
				setState(94);
				match(LBRACE);
				setState(95);
				calculatorStatement();
				setState(96);
				match(RBRACE);
				}
			}

			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(100);
				match(SEMI);
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CalculatorStatementContext extends ParserRuleContext {
		public List<TerminalNode> X6() { return getTokens(RuleParser.X6); }
		public TerminalNode X6(int i) {
			return getToken(RuleParser.X6, i);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(RuleParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(RuleParser.ASSIGN, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> X7() { return getTokens(RuleParser.X7); }
		public TerminalNode X7(int i) {
			return getToken(RuleParser.X7, i);
		}
		public List<TerminalNode> X1() { return getTokens(RuleParser.X1); }
		public TerminalNode X1(int i) {
			return getToken(RuleParser.X1, i);
		}
		public TerminalNode MUL() { return getToken(RuleParser.MUL, 0); }
		public TerminalNode DECIMAL_LITERAL() { return getToken(RuleParser.DECIMAL_LITERAL, 0); }
		public TerminalNode HEX_LITERAL() { return getToken(RuleParser.HEX_LITERAL, 0); }
		public TerminalNode OCT_LITERAL() { return getToken(RuleParser.OCT_LITERAL, 0); }
		public TerminalNode BINARY_LITERAL() { return getToken(RuleParser.BINARY_LITERAL, 0); }
		public TerminalNode FLOAT_LITERAL() { return getToken(RuleParser.FLOAT_LITERAL, 0); }
		public TerminalNode HEX_FLOAT_LITERAL() { return getToken(RuleParser.HEX_FLOAT_LITERAL, 0); }
		public List<TerminalNode> SEMI() { return getTokens(RuleParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(RuleParser.SEMI, i);
		}
		public TerminalNode LIMIT() { return getToken(RuleParser.LIMIT, 0); }
		public TerminalNode LPAREN() { return getToken(RuleParser.LPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(RuleParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RuleParser.COMMA, i);
		}
		public TerminalNode RPAREN() { return getToken(RuleParser.RPAREN, 0); }
		public CalculatorStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_calculatorStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleListener ) ((RuleListener)listener).enterCalculatorStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleListener ) ((RuleListener)listener).exitCalculatorStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleVisitor ) return ((RuleVisitor<? extends T>)visitor).visitCalculatorStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CalculatorStatementContext calculatorStatement() throws RecognitionException {
		CalculatorStatementContext _localctx = new CalculatorStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_calculatorStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(X6);
			setState(107);
			match(ASSIGN);
			setState(108);
			expr(0);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(109);
				match(SEMI);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			match(X7);
			setState(116);
			match(ASSIGN);
			setState(117);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DECIMAL_LITERAL) | (1L << HEX_LITERAL) | (1L << OCT_LITERAL) | (1L << BINARY_LITERAL) | (1L << FLOAT_LITERAL) | (1L << HEX_FLOAT_LITERAL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(118);
				match(SEMI);
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			match(X1);
			setState(125);
			match(ASSIGN);
			setState(126);
			match(X6);
			setState(127);
			match(MUL);
			setState(128);
			match(X7);
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(129);
				match(SEMI);
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==X1) {
				{
				setState(135);
				match(X1);
				setState(136);
				match(ASSIGN);
				setState(137);
				match(LIMIT);
				setState(138);
				match(LPAREN);
				setState(139);
				expr(0);
				setState(140);
				match(COMMA);
				setState(141);
				match(X1);
				setState(142);
				match(COMMA);
				setState(143);
				expr(0);
				setState(144);
				match(RPAREN);
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMI) {
					{
					{
					setState(145);
					match(SEMI);
					}
					}
					setState(150);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionExprContext extends ParserRuleContext {
		public List<ConditionRowExprContext> conditionRowExpr() {
			return getRuleContexts(ConditionRowExprContext.class);
		}
		public ConditionRowExprContext conditionRowExpr(int i) {
			return getRuleContext(ConditionRowExprContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(RuleParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(RuleParser.AND, i);
		}
		public List<TerminalNode> OR() { return getTokens(RuleParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(RuleParser.OR, i);
		}
		public ConditionExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleListener ) ((RuleListener)listener).enterConditionExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleListener ) ((RuleListener)listener).exitConditionExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleVisitor ) return ((RuleVisitor<? extends T>)visitor).visitConditionExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionExprContext conditionExpr() throws RecognitionException {
		ConditionExprContext _localctx = new ConditionExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_conditionExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			conditionRowExpr();
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND || _la==OR) {
				{
				{
				setState(154);
				_la = _input.LA(1);
				if ( !(_la==AND || _la==OR) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(155);
				conditionRowExpr();
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
